app-gitops/app/manifests/carts.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      labels:
        app: carts
    spec:
      serviceAccountName: carts-sa
      containers:
        - name: carts
          image: c1sv3r/app-carts:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
          securityContext:
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: app
spec:
  selector:
    app: carts
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
