app-gitops/app/manifests/catalog-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-db
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-db
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: catalog-db
    spec:
      containers:
        - name: mysql
          image: mysql:8
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "256Mi"
      volumes:
        - name: mysql-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-db-nlb
  namespace: app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  selector:
    app: catalog-db
  ports:
    - port: 3306
      targetPort: 3306
