app-gitops/app/manifests/checkout-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-db
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout-db
  template:
    metadata:
      labels:
        app: checkout-db
    spec:
      containers:
        - name: mysql
          image: mysql:8
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-db
  namespace: app
spec:
  selector:
    app: checkout-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
