app-gitops/app/manifests/checkout.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      serviceAccountName: checkout-sa
      containers:
        - name: checkout
          image: c1sv3r/app-checkout:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
          securityContext:
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: app
spec:
  selector:
    app: checkout
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
