app-gitops/app/manifests/orders.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: app
  annotations:
    reloader.stakater.io/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      annotations:
      labels:
        app: orders
    spec:
      serviceAccountName: orders-sa
      containers:
        - name: orders
          image: c1sv3r/app-orders:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: vault-secrets
              mountPath: /vault/secrets
          resources:
            limits:
              memory: "512Mi"
          securityContext:
            capabilities:
              drop:
                - ALL
      volumes:
        - name: vault-secrets
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: app
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
