app-gitops/app/manifests/ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      serviceAccountName: ui-sa
      containers:
        - name: ui
          image: 134128782576.dkr.ecr.eu-west-1.amazonaws.com/ui:v1.0.3 # {"$imagepolicy": "flux-system:ui-latest"}
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
          securityContext:
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: app
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
